update trilha ignite - splash, home and anuncios

--- a/trilha-ignite/mobile/pages/splash/index.html
+++ b/trilha-ignite/mobile/pages/splash/index.html
@@ -6,11 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="./script.js" defer></script>
-    <link rel="shortcut icon" href="./assets/Logo.ico" type="imagex/jpg">
+    <link rel="shortcut icon" href="../../assets/Logo.ico" type="imagex/jpg">
     <link rel="stylesheet" href="./style.css">
     <title>NLW eSports</title>
 </head>
 <body>
-    
+    <header>
+        <img src="../../assets/Iphone-top.png" alt="">
+    </header>
+
+    <main>
+        <img src="../../assets/Logo.png" alt="">
+    </main>
+
+    <footer>
+        <img src="../../assets/Iphone-down.png" alt="">
+    </footer>
 </body>
 </html>
