--- a/trilha-ignite/mobile/pages/anuncios/index.html
+++ b/trilha-ignite/mobile/pages/anuncios/index.html
@@ -54,7 +54,7 @@
                     <a href="">Sim</a>
                 </div>
 
-                <button>
+                <button onclick="modal()">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M11.875 8.4375H14.375" stroke="white" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
                         <path d="M5.625 8.4375H8.125" stroke="white" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
